--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 						src="./images/lootbox.png"
 						alt=""
 					/>
+					<h3 id="product-name"></h3>
 				</div>
 
 				<div class="spin-btn">
@@ -62,6 +63,11 @@
 				</div>
 			</div>
 		</section>
+		<script
+			async
+			type="text/javascript"
+			src="//static.klaviyo.com/onsite/js/klaviyo.js?company_id=RRftKA"
+		></script>
 
 		<script type="text/javascript" src="./script.js"></script>
 	</body>
